code/doug-xmonad/.stack-work/logs/doug-xmonad-0.1.0.0.log
Configuring doug-xmonad-0.1.0.0...
Preprocessing executable 'doug-xmonad' for doug-xmonad-0.1.0.0..
Building executable 'doug-xmonad' for doug-xmonad-0.1.0.0..
[1 of 1] Compiling Main             ( xmonad.hs, .stack-work/dist/x86_64-linux-nix/Cabal-2.2.0.1/build/doug-xmonad/doug-xmonad-tmp/Main.o )

xmonad.hs:243:1: error:
    The type signature for ‘nixrootKeyMap’
      lacks an accompanying binding
    |
243 | nixrootKeyMap :: (_ ) => XConfig Layout -> Bool -> BindT m ()
    | ^^^^^^^^^^^^^
